[gd_scene load_steps=6 format=3 uid="uid://62reu6ssx6ts"]

[ext_resource type="Script" path="res://scripts/KarnaughLogic/Output/OutputMachine.gd" id="1_74c8r"]
[ext_resource type="PackedScene" uid="uid://bbibk23o6bw0j" path="res://scenes/Karnaugh/Input/Display.tscn" id="2_jgqgc"]
[ext_resource type="PackedScene" uid="uid://blmmbv7ulmbrn" path="res://scenes/Karnaugh/Output/LetterButton.tscn" id="3_1rhdq"]
[ext_resource type="PackedScene" uid="uid://dgesoiypnxo6s" path="res://scenes/Karnaugh/Output/LongButton.tscn" id="4_agj8k"]
[ext_resource type="PackedScene" uid="uid://b4nxabk7h57yo" path="res://scenes/Karnaugh/Output/PlusButton.tscn" id="5_ctafv"]

[node name="OutputMachine" type="Node3D"]
script = ExtResource("1_74c8r")

[node name="Display" parent="." instance=ExtResource("2_jgqgc")]

[node name="LetterButton" parent="." instance=ExtResource("3_1rhdq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.48, 0.45, 0)
display_text = "Button 'A'"

[node name="LetterButton2" parent="." instance=ExtResource("3_1rhdq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.16, 0.45, 0)
letter = 66
display_text = "Button 'B'"

[node name="LetterButton3" parent="." instance=ExtResource("3_1rhdq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.16, 0.45, 0)
letter = 67
display_text = "Button 'C'"

[node name="LetterButton4" parent="." instance=ExtResource("3_1rhdq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.48, 0.45, 0)
letter = 68
display_text = "Button 'D'"

[node name="BackButton" parent="." instance=ExtResource("4_agj8k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.85, 0.225, 0)
display_text = "Backspace Button"
action_text = "Delete character"

[node name="NegateButton" parent="." instance=ExtResource("4_agj8k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.85, 0, 0)
label_text = "Negate"
display_text = "Negate Button"
action_text = "Negate previous symbol"

[node name="ConfirmButton" parent="." instance=ExtResource("4_agj8k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.85, -0.225, 0)
label_text = "Confirm"
display_text = "Confirm Button"
action_text = "Confirm function"

[node name="PlusButton" parent="." instance=ExtResource("5_ctafv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, 0, 0)
label_text = "+"
display_text = "Plus Button"
action_text = "Press Button"

[connection signal="pressed" from="LetterButton" to="." method="_on_letter_button_pressed"]
[connection signal="pressed" from="LetterButton2" to="." method="_on_letter_button_pressed"]
[connection signal="pressed" from="LetterButton3" to="." method="_on_letter_button_pressed"]
[connection signal="pressed" from="LetterButton4" to="." method="_on_letter_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="NegateButton" to="." method="_on_negate_button_pressed"]
[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="PlusButton" to="." method="_on_plus_button_pressed"]
